--- a/docs/SRE/SiteReliabilityEngineering/part3-practices/14.ManagingIncidents.md
+++ b/docs/SRE/SiteReliabilityEngineering/part3-practices/14.ManagingIncidents.md
@@ -1,57 +1,117 @@
-# 03 Embracing Risk
+# 14 Managing Incidents
 
 ## Recap
 
-### Review
+### Overview
 
-First, the chapter likely starts by explaining that in any system, especially large-scale ones, **failures are inevitable**. So, the approach **isn't to eliminate all risks** but to manage them _effectively_. The concept of an **"error budget"** might come into play here. Error budgets allow for a certain amount of **acceptable failure,** which balances reliability with the need to innovate and deploy new features.
+Chapter 14 of _Site Reliability Engineering_ explores the structured approach to incident management, a critical process for minimizing disruptions and restoring normal operations in complex systems. The chapter highlights the importance of effective incident management in limiting the impact of outages and ensuring rapid recovery, presenting Google's proven methodology as a model.
 
-Then, there's probably a discussion on **how to measure risk**. Metrics like Service Level Indicators (SLIs) and Service Level Objectives (SLOs) are essential. **SLIs are the metrics that define what good service looks like (e.g., latency, availability)**, and **SLOs are the targets for those metrics**. **The error budget is the allowable deviation from the SLO**. **_So, if a service meets its SLOs, there's room in the error budget to take risks, like deploying new features._** If the error budget is exhausted, the team focuses on stability until the budget recovers.
+### Google's Incident Management System
 
-The chapter might also talk about **risk tolerance**. Different services have different levels of criticality, so their SLOs and error budgets will vary. For example, a user-facing service might have stricter SLOs than an internal tool. The key is to align the SLOs with business needs and user expectations.
+Google's approach to incident management is built on the **Incident Command System (ICS)**, a framework originally developed for emergency response, valued for its clarity and scalability. Adapted for site reliability engineering, this system focuses on the "three Cs":
 
-Another point could be about the trade-offs between **reliability** and **feature development**. By setting clear SLOs, teams can decide when to push new releases and when to hold back. This prevents over-engineering for reliability, which can stifle innovation, and under-engineering, which leads to frequent outages.
+- **Coordinate**: Organizing efforts to address the incident.
+- **Communicate**: Ensuring clear information flow among stakeholders.
+- **Control**: Managing the situation to mitigate impact and restore stability.
 
-There might also be a section on **how to handle incidents** when they occur. **Post-mortems are important in SRE culture**, focusing on **learning from failures without blame**. This ties back to managing risk by **continuously improving systems based on past incidents**.
+### Key Roles and Responsibilities
 
-The chapter is specifically about embracing risk, **so maybe it emphasizes that taking calculated risks is necessary for progress**. The error budget policy formalizes this by allowing teams to take risks as long as they stay within their budget. If they exceed the budget, they must prioritize reliability work until the budget is restored.
+The chapter outlines a clear division of roles to streamline incident response:
 
-Also, the chapter might discuss the **importance of communication between SREs and product teams**. By having agreed-upon SLOs, both parties can align on priorities. **Product teams want to _launch features_, SREs ensure _reliability_, and the error budget provides a common framework for decision-making**.
+- **Incident Commander (IC)**: Oversees the response, coordinating the team and making high-level decisions.
+- **Communications Lead (CL)**: Manages communication with stakeholders, keeping everyone informed.
+- **Operations Lead (OL)**: Focuses on technical mitigation, working to resolve the issue and minimize user impact.
 
-Chapter 3 includes sections like **"Managing Risk"**, **"Defining and Using Error Budgets"**, **"Risk Tolerance"**.
+These roles provide a **separation of responsibilities**, fostering autonomy and reducing overlap, while remaining flexible—tasks can be delegated or roles expanded as needed.
 
--   In **"Managing Risk"** they probably talk about the inevitability of failure and the need for SREs to manage rather than eliminate risk.
--   **"Defining and Using Error Budgets"** explains how error budgets work as a tool to balance reliability and development velocity.
--   **"Risk Tolerance"** discusses setting appropriate SLOs based on business needs. The summary would tie these together.
+### Essential Tools
 
-So putting it all together, the chapter explains that SREs **embrace risk by quantifying it through SLOs and error budgets**, allowing teams to take calculated risks while maintaining an acceptable level of reliability. **It emphasizes balancing feature development with system stability**, using error budgets as a control mechanism, and fostering a culture that learns from failures without blame.
+A cornerstone of Google's process is the **incident state document**, a real-time, collaboratively editable record that tracks the incident’s progress. Though it may be informal or "messy," it serves as a functional hub for communication and is preserved for later analysis in postmortems.
+
+### Preparation and Practice
+
+The chapter emphasizes **preparation** as vital to success:
+
+- Procedures should be **documented in advance**, developed with input from all potential participants.
+- **Regular practice** ensures the process is instinctive during real incidents.
+- **Trust and autonomy** within roles enable efficient, confident responses.
+
+Responders are also encouraged to monitor their emotional well-being and seek support if needed, acknowledging the human element of incident management.
+
+### Best Practices
+
+The chapter offers actionable best practices:
+
+- **Prioritize tasks** to stop damage and restore service quickly.
+- **Consider alternatives** during the response to adapt to evolving situations.
+- **Conduct postmortems** to analyze incidents, learn lessons, and prevent recurrence.
 
 ## Definitions
 
-1. **Inevitability of Failure:**
-   Systems, especially at scale, will inevitably experience failures. The goal is not to eliminate all risk but to manage it effectively through structured frameworks.
+### 1. The Nature of Incidents
 
-2. **Service Level Objectives (SLOs) and Error Budgets:**
+- **Inevitability and Impact:**
+  The chapter starts by recognizing that even with robust designs, large-scale systems will experience failures. Incidents are inevitable due to inherent system complexity. The focus is not on avoiding incidents entirely but on reducing their impact on users and the business.
+- **Defining Incidents:**
+  It clarifies what qualifies as an “incident” (any unplanned interruption or reduction in service quality) and discusses how proper categorization helps in prioritizing responses based on severity.
 
-    - **SLOs** define acceptable reliability targets (e.g., 99.9% uptime).
-    - **Error budgets** represent the allowable margin for failure (e.g., 0.1% downtime). Teams can deploy new features while within the budget but must prioritize reliability if the budget is exhausted.
-    - This balance ensures innovation without compromising critical system stability.
+### 2. Preparing for Incidents
 
-3. **Risk Tolerance:**
+- **Systems and Processes:**
+  Preparation is critical. Organizations are advised to establish systems (like monitoring and alerting) that detect issues quickly and accurately. This early detection is essential for minimizing the damage caused by an outage.
+- **Runbooks and Documentation:**
+  Detailed runbooks that describe common failure scenarios and provide step-by-step recovery instructions are invaluable. They help guide the technical staff during high-pressure situations, ensuring a more structured response.
+- **Simulations and Drills:**
+  Regularly scheduled incident simulations or “game days” train teams to respond effectively. These drills also help uncover gaps in current processes and improve overall readiness.
 
-    - SLOs align with business and user needs. Critical services (e.g., user-facing apps) have stricter SLOs, while internal tools may tolerate higher risk.
-    - Teams avoid over-engineering for reliability (which stifles innovation) or under-engineering (leading to frequent outages).
+### 3. Incident Response Roles and Structure
 
-4. **Trade-offs Between Reliability and Development:**
-   Error budgets guide decisions: teams push releases when budgets are healthy and focus on stability when budgets are depleted. This fosters collaboration between SREs and product teams.
+- **Role Assignment:**
+  One of the chapter’s central themes is the importance of clear roles during an incident. Key roles include:
+  - **Incident Commander:** Oversees the resolution process, coordinates team efforts, and ensures that communication is maintained.
+  - **Technical Leads:** Focus on diagnosing and resolving the root technical issues.
+  - **Communications Lead:** Responsible for keeping both internal stakeholders and, where necessary, external users informed about the status of the incident.
+- **Escalation Paths:**
+  A well-defined escalation path ensures that appropriate experts are involved as soon as the incident’s impact or complexity demands it, reducing delays in resolution.
 
-5. **Learning from Failure:**
+### 4. The Incident Lifecycle
 
-    - **Post-mortems** analyze incidents without blame, focusing on systemic improvements.
-    - Systems are designed to handle failures gracefully (e.g., redundancy, graceful degradation).
+- **Detection and Notification:**
+  Fast detection through monitoring systems is emphasized, along with automated alerts that notify on-call personnel immediately.
+- **Triage and Diagnosis:**
+  Once an incident is recognized, teams must quickly assess the situation, categorize the severity, and start diagnosing the issue. This stage often involves parallel efforts: some team members work to restore service while others try to understand the root causes.
+- **Mitigation and Resolution:**
+  The chapter outlines strategies to implement temporary fixes (workarounds) that restore functionality swiftly while a more permanent solution is developed. This may also include rolling back recent changes if they are deemed as the likely cause.
+- **Incident Command and Coordination:**
+  The Incident Commander plays a pivotal role throughout the incident, ensuring that all efforts are coordinated, that work is not duplicated, and that every decision is communicated clearly to both the technical team and management.
 
-6. **Reducing Toil:**
-   Automation minimizes repetitive manual tasks, freeing SREs to focus on engineering solutions that mitigate risk and enhance reliability.
+### 5. Post-Incident Activities
 
-**Conclusion:**
-The chapter emphasizes embracing risk as a necessary part of progress. By quantifying risk through SLOs and error budgets, teams can innovate while maintaining reliability. A culture of learning from failures and aligning technical goals with business priorities ensures sustainable growth.
+- **Blameless Postmortems:**
+  A central tenet of the chapter is the value of learning from failure without finger-pointing. Post-incident reviews (postmortems) are held to analyze what went wrong, what was done right, and what can be improved. These reviews emphasize a culture of accountability and learning rather than blame.
+- **Actionable Follow-ups:**
+  The postmortem should result in concrete follow-up actions. These include improving monitoring systems, updating runbooks, or addressing systemic issues in design or process.
+- **Cultural Impact:**
+  A robust post-incident review process helps instill a culture that is open to discussing failures honestly. This culture not only helps in preventing future incidents but also boosts team morale, as lessons learned are used to drive real improvements.
+
+### 6. Communication During Incidents
+
+- **Internal Communication:**
+  Clear and continuous internal communication is necessary for keeping the team and leadership aligned. Regular status updates enable better coordination and reduce confusion.
+- **External Communication:**
+  When customer impact is significant, timely and transparent communication to users is important. This helps manage expectations and maintains trust even when service quality is degraded.
+- **Documentation and Knowledge Sharing:**
+  All aspects of an incident—from initial detection to resolution and postmortem findings—should be documented. This documentation then becomes part of the broader knowledge base that helps inform future incident responses.
+
+### 7. Tools and Best Practices
+
+- **Automation:**
+  Where possible, automating response actions can alleviate human error and speed up mitigation. Tools for automated recovery and rollback are highlighted.
+- **Continuous Improvement:**
+  Finally, the chapter stresses that incident management is not a one-off exercise but a continuous process. Organizations should regularly review and improve their incident management protocols based on real incident data and simulated exercises.
+
+### Conclusion
+
+Chapter 14 of the _Site Reliability Engineering_ book outlines a comprehensive framework for managing incidents in high-scale systems. By preparing thoroughly, clearly defining roles, practicing coordinated response methods, and learning continuously from past events, organizations can mitigate the adverse effects of failures and steadily improve their operational resilience.
+
+For more in-depth details, you can review the original chapter at the [Managing Incidents section of the SRE book](https://sre.google/sre-book/managing-incidents/).
