Update kubernetes links 1

--- a/docs/Ops/orchestration/kubernetes/AB/07.md
+++ b/docs/Ops/orchestration/kubernetes/AB/07.md
@@ -2,42 +2,42 @@
 
 ## Secure Hosts
 
-- Root access disabled
-- Password base authentication disabled
-- Only ssh-key based authentication to be made available
+-   Root access disabled
+-   Password base authentication disabled
+-   Only ssh-key based authentication to be made available
 
 ## Kube API-Server
 
 ### Kube API-Server in the Frontline of Defense
 
-- Controlling access to the API server itself
+-   Controlling access to the API server itself
 
 ### We need two types of decision
 
-- who can access? (Authentication)
-- what can they do? (Authorization)
+-   who can access? (Authentication)
+-   what can they do? (Authorization)
 
 ### Authentication - who can access
 
-- File: username and password
-- File: username and token
-- Certificates
-- External Authentication Provider - LDAP
-- Service Accounts
+-   File: username and password
+-   File: username and token
+-   Certificates
+-   External Authentication Provider - LDAP
+-   Service Accounts
 
 ### Authorization - what can they do
 
-- RBAC authorization
-- ABAC authorization
-- Node authorization
-- Webhook Mode
+-   RBAC authorization
+-   ABAC authorization
+-   Node authorization
+-   Webhook Mode
 
 ## Authentication
 
-- Admins
-- Developers
-- End Users
-- Bots (such as gitlab runner)
+-   Admins
+-   Developers
+-   End Users
+-   Bots (such as gitlab runner)
 
 ### Admins
 
@@ -45,7 +45,7 @@
 
 ### Bots
 
-- Service Accounts
+-   Service Accounts
 
 ### Types
 
@@ -59,60 +59,60 @@ All kubernetes [authentication types]
 
 ### CA authority
 
-- ca.key
-- ca.crt
+-   ca.key
+-   ca.crt
 
 ### Server
 
 #### ETCD
 
-- etcdserver.key
-- etcdserver.crt
+-   etcdserver.key
+-   etcdserver.crt
 
 #### API-Server
 
-- apiserver.key
-- apiserver.crt
+-   apiserver.key
+-   apiserver.crt
 
 #### Kubelet
 
-- kubelet.key
-- kubelet.crt
+-   kubelet.key
+-   kubelet.crt
 
 ### Client
 
 #### Admin User
 
-- admin.key
-- admin.crt
+-   admin.key
+-   admin.crt
 
 #### Kube-APIServer
 
-- apiserver-etcd-client.key
-- apiserver-etcd-client.crt
+-   apiserver-etcd-client.key
+-   apiserver-etcd-client.crt
 
-- apiserver-kubelet-client.key
-- apiserver-kubelet-client.crt
+-   apiserver-kubelet-client.key
+-   apiserver-kubelet-client.crt
 
 #### Kubelet
 
-- kubelet-client.key
-- kubelet-client.crt
+-   kubelet-client.key
+-   kubelet-client.crt
 
 #### Kube-Scheduler
 
-- scheduler.key
-- scheduler.crt
+-   scheduler.key
+-   scheduler.crt
 
 #### Kube-Controller
 
-- control-manager.key
-- control-manager.crt
+-   control-manager.key
+-   control-manager.crt
 
 #### Kube-Proxy
 
-- kubeproxy.key
-- kubeproxy.crt
+-   kubeproxy.key
+-   kubeproxy.crt
 
 ## Update Exists Certificates
 
@@ -324,7 +324,7 @@ openssl x509 -req -in etcdserver.csr -CA ca.crt -CAkey ca.key -out etcdserver.cr
 openssl genrsa -out kubelet.key 2048
 ```
 
-2: generate a new key file  `kubelet.csr` by `kubelet.key`
+2: generate a new key file `kubelet.csr` by `kubelet.key`
 
 ```bash
 openssl req -new -key kubelet.key -subj "/CN=kubelet \O=system:kubelet" -out kubelet.csr
@@ -369,7 +369,7 @@ kubeadm certs -h
 kubeadm certs check-expiration
 ```
 
-Renew all available  certs
+Renew all available certs
 
 ```bash
 kubeadm certs renew -h
@@ -422,15 +422,15 @@ cat mehrdad.csr | base64 | tr -d "\n" | pbcopy
 apiVersion: certificates.k8s.io/v1
 kind: CertificateSigningRequest
 metadata:
-  name: mehrdad
-  namespace: collector
+    name: mehrdad
+    namespace: collector
 spec:
-  groups:
-  - system:authenticated
-  request: "LS0tLS1CRUdJTiBDRVJUSUZ==..." # output of step #3
-  signerName: kubernetes.io/kube-apiserver-client
-  usages:
-   - client auth
+    groups:
+        - system:authenticated
+    request: "LS0tLS1CRUdJTiBDRVJUSUZ==..." # output of step #3
+    signerName: kubernetes.io/kube-apiserver-client
+    usages:
+        - client auth
 ```
 
 5: apply user's csr file
@@ -453,13 +453,13 @@ kubectl describe csr mehrdad
 
 8: approve or deny user csr
 
-- if you decided to **approve**
+-   if you decided to **approve**
 
 ```bash
 kubectl certificate approve mehrdad
 ```
 
-- if you decided to **deny**
+-   if you decided to **deny**
 
 ```bash
 kubectl certificate deny mehrdad
@@ -473,20 +473,20 @@ kubectl get csr
 
 10: fetch the certificate id
 
-- print in yaml format
+-   print in yaml format
 
 ```bash
 kubectl get csr mehrdad -o yaml
 ```
 
-- print in json format
+-   print in json format
 
 ```bash
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}'
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d
 ```
 
-- write to cert file
+-   write to cert file
 
 ```bash
 kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrdad-signed-csr.crt
@@ -500,9 +500,9 @@ kubectl get csr mehrdad -o jsonpath='{.status.certificate}' | base64 -d > mehrda
 
 12: we should have these 3 files
 
-- I. client-private.key
-- II. client-signed-csr.crt
-- III. ca.crt
+-   I. client-private.key
+-   II. client-signed-csr.crt
+-   III. ca.crt
 
 13: check the final value of signed cert
 
@@ -528,7 +528,7 @@ check the important fields like, issuer, common-name and etc
 
 ### Controller-Manger
 
-- **CSR-APPROVING** and **CSR-SIGNING** modules are responsible for **CA Authority** in kubernetes cluster
+-   **CSR-APPROVING** and **CSR-SIGNING** modules are responsible for **CA Authority** in kubernetes cluster
 
 ## Getting Request to API Server
 
@@ -558,79 +558,79 @@ Before you get request via kubectl, you need to put all configs into a specific 
 ```yaml
 apiVersion: v1
 clusters:
-- cluster:
-    certificate-authority: /home/sre/k8s/manifests/certificate/ca.crt
-    server: https://192.168.1.101:6443
-  name: cka
+    - cluster:
+          certificate-authority: /home/sre/k8s/manifests/certificate/ca.crt
+          server: https://192.168.1.101:6443
+      name: cka
 contexts:
-- context:
-    cluster: cka
-    user: mehrdad
-  name: mehrdad@cka
+    - context:
+          cluster: cka
+          user: mehrdad
+      name: mehrdad@cka
 current-context: mehrdad@cka
 kind: Config
 preferences: {}
 users:
-- name: mehrdad
-  user:
-    client-certificate: /home/sre/k8s/manifests/certificate/mehrdad.crt
-    client-key: /home/sre/k8s/manifests/certificate/mehrdad.key
+    - name: mehrdad
+      user:
+          client-certificate: /home/sre/k8s/manifests/certificate/mehrdad.crt
+          client-key: /home/sre/k8s/manifests/certificate/mehrdad.key
 ```
 
 you can also put values instead of file path
 
-- first you need to encode context to `base64`
+-   first you need to encode context to `base64`
 
 ```bash
 cat ca.crt | base64 | tr -d "\n" | pbcopy
 ```
 
-- encode and copy `client.crt`
+-   encode and copy `client.crt`
 
 ```bash
 cat client.crt | base64 | tr -d "\n" | pbcopy
 ```
 
-- encode and copy `client.key`
+-   encode and copy `client.key`
 
 ```bash
 cat client.key | base64 | tr -d "\n" | pbcopy
 ```
 
-- change some fields, append `data` to end of the keys
+-   change some fields, append `data` to end of the keys
 
 ```yaml
 apiVersion: v1
 
 clusters:
-- cluster:
-    certificate-authority-data: "<ca.crt base64 encoded value>"
-    server: https://192.168.1.101:6443
-  name: cka
+    - cluster:
+          certificate-authority-data: "<ca.crt base64 encoded value>"
+          server: https://192.168.1.101:6443
+      name: cka
 
 contexts:
-- context:
-    cluster: cka
-    user: mehrdad
-  name: mehrdad@cka
-- context:
-    cluster: cka
-    user: babak
-  name: babak@cka
+    - context:
+          cluster: cka
+          user: mehrdad
+      name: mehrdad@cka
+    - context:
+          cluster: cka
+          user: babak
+      name: babak@cka
 
 current-context: mehrdad@cka
 kind: Config
 preferences: {}
 
 users:
-- name: mehrdad
-  user:
-    client-certificate-data: "<mehrdad.crt base64 encoded value>"
-    client-key-data: "<mehrdad.key base64 encoded value>"
-- name: babak
-  user:
-    client-certificate-data: "<babak.crt base64 encoded value>"
-    client-key-data: "<babak.key base64 encoded value>"
+    - name: mehrdad
+      user:
+          client-certificate-data: "<mehrdad.crt base64 encoded value>"
+          client-key-data: "<mehrdad.key base64 encoded value>"
+    - name: babak
+      user:
+          client-certificate-data: "<babak.crt base64 encoded value>"
+          client-key-data: "<babak.key base64 encoded value>"
 ```
 
 check it after doing above step
@@ -648,43 +648,43 @@ finally you should have config file like it
 apiVersion: v1
 
 clusters:
-- cluster:
-    certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0....
-    server: https://192.168.1.101:6443
-  name: cluster.local
+    - cluster:
+          certificate-authority-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0....
+          server: https://192.168.1.101:6443
+      name: cluster.local
 
 contexts:
-- context:
-    cluster: cluster.local
-    user: kubernetes-admin
-  name: kubernetes-admin@cluster.local
-- context:
-    cluster: cluster.local
-    user: mehrdad-admin
-  name: mehrdad-admin@cluster.local
-- context:
-    cluster: cluster.local
-    user: babak-admin
-    namespace: collector
-  name: babak-admin@cluster.local
+    - context:
+          cluster: cluster.local
+          user: kubernetes-admin
+      name: kubernetes-admin@cluster.local
+    - context:
+          cluster: cluster.local
+          user: mehrdad-admin
+      name: mehrdad-admin@cluster.local
+    - context:
+          cluster: cluster.local
+          user: babak-admin
+          namespace: collector
+      name: babak-admin@cluster.local
 
 current-context: kubernetes-admin@cluster.local
 kind: Config
 preferences: {}
 
 users:
-- name: kubernetes-admin
-  user:
-    client-certificate-data: LS0tLS1CRUdJTiBDRVJ...
-    client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJ...
-- name: babak-admin
-  user:
-    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
-    client-key-data: LS0tLS1CRUdJTiBQUklWQVR...
-- name: mehrdad-admin
-  user:
-    client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
-    client-key-data: LS0tLS1CRUdJTiBQUklWQV...
+    - name: kubernetes-admin
+      user:
+          client-certificate-data: LS0tLS1CRUdJTiBDRVJ...
+          client-key-data: LS0tLS1CRUdJTiBSU0EgUFJJ...
+    - name: babak-admin
+      user:
+          client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
+          client-key-data: LS0tLS1CRUdJTiBQUklWQVR...
+    - name: mehrdad-admin
+      user:
+          client-certificate-data: LS0tLS1CRUdJTiBDRVJUSUZJQ0...
+          client-key-data: LS0tLS1CRUdJTiBQUklWQV...
 ```
 
 **Note:** All the hashed values have been encoded to `base64`
@@ -703,22 +703,17 @@ kubectl --kubeconfig <new-config> config use-context <context-name>
 
 set default config
 
-- copy the new-config to `~/.kube/config`
-- or set the `KUBECONFIG` environment variable
+-   copy the new-config to `~/.kube/config`
+-   or set the `KUBECONFIG` environment variable
 
 ```bash
 export KUBECONFIG=/path/to/your/new/config
 ```
 
----
-
 <!-- links -->
+
 [authentication types]: https://kubernetes.io/docs/reference/access-authn-authz/authentication/
-
-[kube-api-server-certs-conf]: ../../../assets/kuber/kinpic/S07-security-kube-api-server-certs.png
-
-[kubelet-nodes-certs]: ../../../assets/kuber/kinpic/S07-security-kubelet-certs.png
-
+[kube-api-server-certs-conf]: ../../../../assets/kuber/kinpic/S07-security-kube-api-server-certs.png
+[kubelet-nodes-certs]: ../../../../assets/kuber/kinpic/S07-security-kubelet-certs.png
 [CertificateSigningRequest]: https://kubernetes.io/docs/reference/access-authn-authz/certificate-signing-requests/
-
 [cert-manager]: https://cert-manager.io/
