--- a/docs/Ops/orchestration/kubernetes/AB/06.md
+++ b/docs/Ops/orchestration/kubernetes/AB/06.md
@@ -2,101 +2,101 @@
 
 ## Backup Candidates
 
-- Resource Configuration
-- ETCD Cluster
-- Persist Volumes
-  - [Velero] is a Backup and migrate Kubernetes resources and persistent volumes
+-   Resource Configuration
+-   ETCD Cluster
+-   Persist Volumes
+    -   [Velero] is a Backup and migrate Kubernetes resources and persistent volumes
 
 ## Installation, Configuration and Validation
 
 ### Objectives
 
-- Design a Kubernetes Cluster
-- Choosing Kubernetes Infrastructure
-- H.A. Kubernetes Cluster
-- Deploy a Kubernetes Cluster
-- Cluster E2E Test
+-   Design a Kubernetes Cluster
+-   Choosing Kubernetes Infrastructure
+-   H.A. Kubernetes Cluster
+-   Deploy a Kubernetes Cluster
+-   Cluster E2E Test
 
 ### Purpose use of Kubernetes Cluster
 
 #### Education
 
-- MiniKube
-- Single-node cluster with Kubeadm/GCP/AWD
+-   MiniKube
+-   Single-node cluster with Kubeadm/GCP/AWD
 
 #### Development & Testing
 
-- Multi-node cluster with a **Single Master** and **Multiple Workers**
-- Setup using kubeadm tool or quick provision on GCP/AWS/AKS
+-   Multi-node cluster with a **Single Master** and **Multiple Workers**
+-   Setup using kubeadm tool or quick provision on GCP/AWS/AKS
 
 #### Hosting Production Application
 
-- **Hight Available** multi-node cluster with **Multi Master Node**
-- Using *kubeadm/KOps* on-perm or GCP/AWS or other supported platform
-- Considering for large cluster
-  - up to 5k nodes
-  - up to 150k PODs in the cluster
-  - up to 300k total containers
-  - up to 100 pods per node
+-   **Hight Available** multi-node cluster with **Multi Master Node**
+-   Using _kubeadm/KOps_ on-perm or GCP/AWS or other supported platform
+-   Considering for large cluster
+    -   up to 5k nodes
+    -   up to 150k PODs in the cluster
+    -   up to 300k total containers
+    -   up to 100 pods per node
 
 #### Cloud or On-premise?
 
-- Use Kubeadm/KOps/Kubespray for on-perm
-- GKE for GCP
-- EKS for AWS
-- AKS for Azure
+-   Use Kubeadm/KOps/Kubespray for on-perm
+-   GKE for GCP
+-   EKS for AWS
+-   AKS for Azure
 
 #### Workloads
 
-- How many?
-- What kind?
-  - Web
-  - AI
-  - Big Data Analytics
+-   How many?
+-   What kind?
+    -   Web
+    -   AI
+    -   Big Data Analytics
 
 #### Application Resource Requirement
 
-- CPU intensive
-- Memory intensive
+-   CPU intensive
+-   Memory intensive
 
 #### Storage
 
-- High performance - SSD backed storage
-- Multiple concurrent connections - Network-based storage
-- Persist shared volumes - for shared access across shared PODs
+-   High performance - SSD backed storage
+-   Multiple concurrent connections - Network-based storage
+-   Persist shared volumes - for shared access across shared PODs
 
 #### Network Traffic
 
-- Continuous Heavy
-- Burst
+-   Continuous Heavy
+-   Burst
 
 #### Nodes
 
-- Virtual or physical machines
+-   Virtual or physical machines
 
-- Master vs worker node
-  - Master nodes can host workloads (not recommended)
-- Linux x86_64 architecture
+-   Master vs worker node
+    -   Master nodes can host workloads (not recommended)
+-   Linux x86_64 architecture
 
 #### Large Scale Master Nodes
 
-- Is better to cluster ETCD on different machine
+-   Is better to cluster ETCD on different machine
 
 ## Choosing Kubernetes Infrastructure
 
 ### Turnkey Solution
 
-- Openshift
+-   Openshift
 
-- Vagrant
+-   Vagrant
 
 ### Hosted Solution
 
-- Manged by host
-- K8S-as-a-Service
-- GKE - Google kubernetes engine
-- Amazon elastic container service for kubernetes (EKS)
-- Microsoft Azure
+-   Manged by host
+-   K8S-as-a-Service
+-   GKE - Google kubernetes engine
+-   Amazon elastic container service for kubernetes (EKS)
+-   Microsoft Azure
 
 ## Cluster High Availability
 
@@ -108,7 +108,7 @@
 
 ### API Server
 
-[API-Server] can cluster in `Active Active` mode via a *loadbalancer* (Nginx, Haproxy, ...)
+[API-Server] can cluster in `Active Active` mode via a _loadbalancer_ (Nginx, Haproxy, ...)
 
 ### Control Manager
 
@@ -137,14 +137,14 @@ API-Servers should [recognize] all ETCD external nodes
 #### Number of ETCD Nodes
 
 | Instances | Fault Tolerance | Usage |
-| --- | --- | --- |
-| 1 | 0 | no  |
-| 2 | 0 | no  |
-| 3 | 1 | yes |
-| 4 | 1 | no  |
-| 5 | 2 | yes |
-| 6 | 2 | no  |
-| 7 | 3 | yes |
+| --------- | --------------- | ----- |
+| 1         | 0               | no    |
+| 2         | 0               | no    |
+| 3         | 1               | yes   |
+| 4         | 1               | no    |
+| 5         | 2               | yes   |
+| 6         | 2               | no    |
+| 7         | 3               | yes   |
 
 ## Deploy Kubernetes Cluster
 
@@ -152,8 +152,8 @@ Minimum 3 nodes to setup K8S cluster
 
 ### Manually
 
-- [Kubernetes the hard way][k8s-thw]
-- [Kubeadm][kubeadm-cluster]
+-   [Kubernetes the hard way][k8s-thw]
+-   [Kubeadm][kubeadm-cluster]
 
 #### [Steps of Kubeadm][step-of-kadm]
 
@@ -168,25 +168,25 @@ Minimum 3 nodes to setup K8S cluster
 
 #### Developer Mode Provision
 
-- [vagrant]
-  - [Vagrantfile and Scripts][k2v] to automate k8s setup using kubeadm
-- [kind]
+-   [vagrant]
+    -   [Vagrantfile and Scripts][k2v] to automate k8s setup using kubeadm
+-   [kind]
 
 ## Cluster End2End Test (Validating)
 
-- Full test has around 1K checks - take ages ~ 12h
-- Conforming has around 160 checks - enough to be certified 1.5h
-  - Network should function for intra-pod communication
-  - Service should serve a basic endpoint from pods
-  - Service point latency should not very high
-  - DNS should provide DNS for services
-  - Secret should be consumable in multiple volume in a pod
-  - Secret should be consumable from pods in volume in mapping
-  - ConfigMap should be consumable from pods in volumes
+-   Full test has around 1K checks - take ages ~ 12h
+-   Conforming has around 160 checks - enough to be certified 1.5h
+    -   Network should function for intra-pod communication
+    -   Service should serve a basic endpoint from pods
+    -   Service point latency should not very high
+    -   DNS should provide DNS for services
+    -   Secret should be consumable in multiple volume in a pod
+    -   Secret should be consumable from pods in volume in mapping
+    -   ConfigMap should be consumable from pods in volumes
 
 ### Validate K8S Configuration with [Sonobuoy]
 
-```bash
+```sh
 sonobuoy run
 sonobuoy status
 sonobuoy log
@@ -195,14 +195,14 @@ sonobuoy delete
 
 ## Commands
 
-```bash
+```sh
 # get all resource configuration files from all namespaces
 kubectl get --all-namespace -o yaml > all-deploy-services.yaml
 ```
 
 ### Installation Tips
 
-```bash
+```sh
 # hold services to avoid update wrongly
 sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 ```
@@ -211,7 +211,7 @@ sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 
 ### Initialize master node to connect to cluster
 
-```bash
+```sh
 kubeadm init \
 --kubernetes-version $KUBERNETES_VERSION \
 --apiserver-advertise-address $MASTERNODE_IP \
@@ -222,28 +222,28 @@ kubeadm init \
 
 #### On Master node
 
-- Get cluster information to fetch `MASTER_IP` and `MASTER_PORT`
+-   Get cluster information to fetch `MASTER_IP` and `MASTER_PORT`
 
-```bash
+```sh
 ## get master node IP addr
 kubectl cluster-info
 ```
 
-- Get endpoints list
+-   Get endpoints list
 
-```bash
+```sh
 kubectl get endpoints -n kube-system
 ```
 
-- Get `TOKEN` from the master
+-   Get `TOKEN` from the master
 
-```bash
+```sh
 kubeadm token list/create
 ```
 
-- Get the ca `HASH` from the master
+-   Get the ca `HASH` from the master
 
-```bash
+```sh
 openssl x509 -in /etc/kubernetes/pki/ca.crt -pubkey -noout | openssl pkey -pubin -outform DER | openssl dgst -sha256 | cut -d' ' -f2
 # or
 openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outform der 2>/dev/null | openssl dgst -sha256 -hex | sed 's/^.* //'
@@ -251,15 +251,15 @@ openssl x509 -pubkey -in /etc/kubernetes/pki/ca.crt | openssl rsa -pubin -outfor
 
 #### On Worker node
 
-- Join a worker to master
+-   Join a worker to master
 
-```bash
+```sh
 kubeadm join $MASTER_IP:$MASTER_PORT --token $TOKEN --discovery-token-ca-cert-hash sha256:$HASH
 ```
 
 ### Upgrade K8S Cluster
 
-```bash
+```sh
 # upgrade cluster via kubeadm and "-1/+1" strategy
 
 # Master nodes
@@ -290,7 +290,7 @@ kubectl get nodes
 
 ### Backup etcd
 
-```bash
+```sh
 # via 'etcdctl'
 
 ## take the snapshot
@@ -316,14 +316,13 @@ mv /path/to/k8s/config/kube-apiserver.yaml.main  kube-apiserver.yaml
 
 ```
 
-[API-Server]: ../../../assets/kuber/kinpic/S06-k8s-cluster-api_server.png
-[simple-view-le]: ../../../assets/kuber/kinpic/S06-k8s-cluster-leader-election.png
-[Control-Manager]: ../../../assets/kuber/kinpic/S06-k8s-cm-schdlr.png
-[Scheduler]: ../../../assets/kuber/kinpic/S06-k8s-cm-schdlr.png
-[Stacked]: ../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-stck.png
-[External]: ../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-ext.png
-[recognize]: ../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-ext-cfg.png
-
+[API-Server]: ../../../../assets/kuber/kinpic/S06-k8s-cluster-api_server.png
+[simple-view-le]: ../../../../assets/kuber/kinpic/S06-k8s-cluster-leader-election.png
+[Control-Manager]: ../../../../assets/kuber/kinpic/S06-k8s-cm-schdlr.png
+[Scheduler]: ../../../../assets/kuber/kinpic/S06-k8s-cm-schdlr.png
+[Stacked]: ../../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-stck.png
+[External]: ../../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-ext.png
+[recognize]: ../../../../assets/kuber/kinpic/S06-k8s-cluster-etcd-ext-cfg.png
 [leader-election]: https://kubernetes.io/blog/2016/01/simple-leader-election-with-kubernetes/
 [Velero]: https://velero.io/
 [ofhat]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/
