Update kubernetes links 4

--- a/docs/Ops/orchestration/kubernetes/AB/03.md
+++ b/docs/Ops/orchestration/kubernetes/AB/03.md
@@ -1,6 +1,6 @@
 # 03. APIs
 
-- [**Kubernetes API Ref**](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/)
+-   [**Kubernetes API Ref**](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/)
 
 ## [Workloads]
 
@@ -18,8 +18,8 @@ A ReplicaSet can be easily [scaled][replicaset-scaling] up or down by simply upd
 
 ### ReplicaSet APIs
 
-- [ReplicaSet v1 apps]
-- [ReplicationController v1 core]
+-   [ReplicaSet v1 apps]
+-   [ReplicationController v1 core]
 
 **Note:** The most important tag that we should use in workload is: [Label Selectors] [Label-Selectors]
 
@@ -31,25 +31,25 @@ You describe a `desired state` in a [Deployment], and the Deployment Controller 
 
 ### Main Difference with ReplicaSet
 
-- Rolling Updating
-  - Smooth version updating
-  - Step updateing
-- Pause/Resume Changes
-- Rollback Changes
+-   Rolling Updating
+    -   Smooth version updating
+    -   Step updateing
+-   Pause/Resume Changes
+-   Rollback Changes
 
 ### [Use Case](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#use-case)
 
-- Create a Deployment to rollout a ReplicaSet.
-- Declare the new state of the Pods.
-- Rollback to an earlier Deployment.
-- Scale up the Deployment to facilitate more load.
-- Pause the rollout of a Deployment.
-- Use the status of the Deployment.
-- Clean up older ReplicaSets.
+-   Create a Deployment to rollout a ReplicaSet.
+-   Declare the new state of the Pods.
+-   Rollback to an earlier Deployment.
+-   Scale up the Deployment to facilitate more load.
+-   Pause the rollout of a Deployment.
+-   Use the status of the Deployment.
+-   Clean up older ReplicaSets.
 
 ### DeploymentSet APIs
 
-- [Deployment v1 apps]
+-   [Deployment v1 apps]
 
 ## Labels and Selectors
 
@@ -77,7 +77,7 @@ When you create a [Service], it creates a corresponding [DNS entry]. This entry 
 
 ### Namespace APIs
 
-- [Namespace v1 core]
+-   [Namespace v1 core]
 
 ## Resource Quotas
 
@@ -93,9 +93,9 @@ When several users or teams share a cluster with a fixed number of nodes, there 
 
 In Kubernetes, a [Service][Service-Networking] is a method for exposing a network application that is running as one or more Pods in your cluster.
 
-- Enable communication <ins>between various component</ins> **_within_** and **_outside_** of application.
+-   Enable communication <ins>between various component</ins> **_within_** and **_outside_** of application.
 
-- Help us **_connect application_** together with other applications or users
+-   Help us **_connect application_** together with other applications or users
 
 ### Service type
 
@@ -103,33 +103,33 @@ Kubernetes [Service types] allow you to specify what kind of Service you want.
 
 The available `type` values and their behaviors are:
 
-- #### ClusterIP
+-   #### ClusterIP
 
-  Exposes the Service on a **_[cluster-internal IP]_**. Choosing this value makes the Service only reachable from within the cluster. This is the default that is used if you don't explicitly specify a `type` for a Service. You can expose the Service to the public internet using an [Ingress] or a [Gateway].
+    Exposes the Service on a [**cluster internal IP**]. Choosing this value makes the Service only reachable from within the cluster. This is the default that is used if you don't explicitly specify a `type` for a Service. You can expose the Service to the public internet using an [Ingress] or a [Gateway].
 
-  **Calling a clusterIP via [DNS] in _Different_ Namespace**
+    **Calling a clusterIP via [DNS] in _Different_ Namespace**
 
-  ```shell
-  kubectl -n <namespace-name> exec <pod-name> -- curl <service-name>.<namespace>.svc.cluster.local:<target-port>
-  ```
+    ```shell
+    kubectl -n <namespace-name> exec <pod-name> -- curl <service-name>.<namespace>.svc.cluster.local:<target-port>
+    ```
 
-  **Calling a clusterIP via DNS in _Same_ Namespace**
+    **Calling a clusterIP via DNS in _Same_ Namespace**
 
-  ```shell
-  kubectl exec <pod-name> -- curl <service-name>:<target-port>
-  ```
+    ```shell
+    kubectl exec <pod-name> -- curl <service-name>:<target-port>
+    ```
 
-- #### NodePort
+-   #### NodePort
 
-  Exposes the Service on each Node's IP at a static port (the [NodePort]). To make the node port available, Kubernetes sets up a cluster IP address, the same as if you had requested a Service of type: ClusterIP.
+    Exposes the Service on each Node's IP at a static port (the [NodePort]). To make the node port available, Kubernetes sets up a cluster IP address, the same as if you had requested a Service of type: ClusterIP.
 
-- #### LoadBalancer
+-   #### LoadBalancer
 
-  Exposes the Service externally using an external [load balancer]. Kubernetes does not directly offer a load balancing component; you must provide one, or you can integrate your Kubernetes cluster with a cloud provider.
+    Exposes the Service externally using an external [load balancer]. Kubernetes does not directly offer a load balancing component; you must provide one, or you can integrate your Kubernetes cluster with a cloud provider.
 
-- #### ExternalName
+-   #### ExternalName
 
-  Maps the Service to the contents of the [externalName] field (for example, to the hostname api.foo.bar.example). The mapping configures your cluster's DNS server to return a CNAME record with that external hostname value. No proxying of any kind is set up.
+    Maps the Service to the contents of the [externalName] field (for example, to the hostname api.foo.bar.example). The mapping configures your cluster's DNS server to return a CNAME record with that external hostname value. No proxying of any kind is set up.
 
 ### Port Forward
 
@@ -170,6 +170,7 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 ```
 
 <!-- links -->
+
 [Workloads]: https://kubernetes.io/docs/concepts/workloads
 [ReplicaSet]: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset
 [replicaset-scaling]: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/#scaling-a-replicaset
@@ -190,7 +191,6 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [Resource quotas API]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#resourcequota-v1-core
 [Service-Networking]: https://kubernetes.io/docs/concepts/services-networking/service
 [Service types]: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-[cluster-internal IP]: (https://kubernetes.io/docs/concepts/services-networking/service/#type-clusterip)
 [Ingress]: https://kubernetes.io/docs/concepts/services-networking/ingress
 [Gateway]: https://gateway-api.sigs.k8s.io
 [NodePort]: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
@@ -202,3 +202,4 @@ kubectl taint nodes node1 key1=value1:NoSchedule-
 [Tolerations]: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration
 [DNS]: ../kubernetes_in_picture.md#dns
 [Scheduler]: https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler
+[**cluster internal IP**]: https://kubernetes.io/docs/concepts/services-networking/service/#type-clusterip
