Fix typo in KindD link to KinD

--- a/docs/Ops/orchestration/kubernetes/AB/02.md
+++ b/docs/Ops/orchestration/kubernetes/AB/02.md
@@ -11,7 +11,7 @@
 ### Dev / Training
 
 - [MiniKube]
-- [KindD] (Kubernetes in Docker)
+- [KinD] (Kubernetes in Docker)
 - [DockerDesktop]
 
 ## Control Plane Components
