Fix link formatting for KinD in documentation

--- a/docs/Ops/orchestration/kubernetes/AB/02.md
+++ b/docs/Ops/orchestration/kubernetes/AB/02.md
@@ -128,5 +128,5 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 [Container-v1-core]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core
 [api-terms]: https://kubernetes.io/docs/reference/using-api/api-concepts/#standard-api-terminology
 [MiniKube]: https://minikube.sigs.k8s.io/docs/start/?arch=%2Fwindows%2Fx86-64%2Fstable%2F.exe+download
-[KindD]: https://kind.sigs.k8s.io/
+[KinD]: https://kind.sigs.k8s.io/
 [DockerDesktop]: https://docs.docker.com/desktop/kubernetes/
